<resources>
    <string name="app_name">UI Patterns</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="siranush_hovsepyan_shipping">Siranush Hovsepyan Shipping</string>
</resources>
